# For more details on this file see: https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "rediscache"
version = "1.1.2"
description = "Redis caching of functions evolving over time"
authors = ["Pierre Cart-Grandjean <pcart-grandjean@amadeus.com>"]
license = "MIT"
readme = "README.md"
keywords = ["redis", "performance", "cache"]
maintainers = ["Amadeus IT Group <opensource@amadeus.com>"]
repository = "https://github.com/AmadeusITGroup/RedisCache"
# Classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "rediscache" }]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^6.1.0"
executiontime = "0.4.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.5"
pytest = "^8.3.5"
pdbpp = "^0.10.3"
mypy = "^1.15.0"
black = "^25.1.0"
pytest-cov = "^6.0.0"
tornado = "^6.4.2"
pip-audit = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
webapp = "demo.webapp:main"

[tool.mypy]
strict = true

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 160
max-args = 10
