# For more details on this file see: https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "rediscache"
version = "1.1.4"
description = "Redis caching of functions evolving over time"
authors = ["Pierre Cart-Grandjean <pcart-grandjean@amadeus.com>"]
license = "MIT"
readme = "README.md"
keywords = ["redis", "performance", "cache"]
maintainers = ["Amadeus IT Group <opensource@amadeus.com>"]
repository = "https://github.com/AmadeusITGroup/RedisCache"
# Classifiers: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "rediscache" }]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^7.1.0"
executiontime = "0.4.4"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
pytest = "^9.0.2"
pdbpp = "^0.11.6"
mypy = "^1.15.0"
black = "^25.1.0"
pytest-cov = "^7.0.0"
tornado = "^6.5.1"
pip-audit = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
webapp = "demo.webapp:main"

[tool.mypy]
strict = true

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 160
max-args = 10
